# tier-backup

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  QUICK_START.md  README.md  SYMLINK_GUIDE.md  back_config.json  config_examples.json  pyproject.toml  run_backup.bat  run_backup.sh  test_config.json  test_symlink.py  tier_backup.py
docs/: COMPRESSION_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_START.md  SYMLINK_GUIDE.md
examples/: prepare_test_env.py
scripts/: run_backup.bat  run_backup.sh
src/: __init__.py
src/core/: __init__.py  tier_backup.py
src/tests/: test_backup_logic.py  test_compression.py
